[project]
name = "ardanoswiki"
version = "0.1.0"
description = "A self coded wiki app for my DnD world."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "markdown>=3.8",
    "ruff>=0.11.10",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev-tools = [
    "black>=25.1.0",
    "ruff>=0.11.10",
]
